--- a/front/index.html
+++ b/front/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo</title>
+    <title>Titre de la page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
+<header>
+    <nav>
+        <div>
+            <img />
+            <h1>Nom du site</h1>
+        </div>
+        <ul>
+            <li><a href="index.html">Nos produits</a></li>
+            <li><a href="#">Connexion</a></li>
+            <li><a href="#">Inscription</a></li>
+        </ul>
+    </nav>
+</header>
+
 <body>
-    <p>Hello world ! </p>
+    <div class="ariane">
+        <a href="index.html">PRODUITS</a> <span>></span><a href="index.html">MEUBLE</a>
+    </div>
+    <section id="product-list">
+        <a href="product.html ">
+            <div>
+                <img src="/assets/img/product.jpg" alt="product" />
+                <p>Chaise de bureau</p>
+                <p>24.99€</p>
+            </div>
+        </a>
+        <a href="product.html ">
+            <div>
+                <img src="/assets/img/product.jpg" alt="product" />
+                <p>Chaise de bureau</p>
+                <p>24.99€</p>
+            </div>
+        </a>
+        <a href="product.html ">
+            <div>
+                <img src="/assets/img/product.jpg" alt="product" />
+                <p>Chaise de bureau</p>
+                <p>24.99€</p>
+            </div>
+        </a>
+        <a href="product.html ">
+            <div>
+                <img src="/assets/img/product.jpg" alt="product" />
+                <p>Chaise de bureau</p>
+                <p>24.99€</p>
+            </div>
+        </a>
+        <a href="product.html ">
+            <div>
+                <img src="/assets/img/product.jpg" alt="product" />
+                <p>Chaise de bureau</p>
+                <p>24.99€</p>
+            </div>
+        </a>
+    </section>
 </body>
+
 </html>
