[add] item samples

--- a/front/index.html
+++ b/front/index.html
@@ -24,42 +24,49 @@
         <a href="index.html">PRODUITS</a> <span>></span><a href="index.html">MEUBLE</a>
     </div>
     <section id="product-list">
-        <a href="product.html ">
+        <!-- <a href="product.html ">
             <div>
                 <img src="/assets/img/product.jpg" alt="product" />
                 <p>Chaise de bureau</p>
                 <p>24.99€</p>
             </div>
-        </a>
-        <a href="product.html ">
-            <div>
-                <img src="/assets/img/product.jpg" alt="product" />
-                <p>Chaise de bureau</p>
-                <p>24.99€</p>
-            </div>
-        </a>
-        <a href="product.html ">
-            <div>
-                <img src="/assets/img/product.jpg" alt="product" />
-                <p>Chaise de bureau</p>
-                <p>24.99€</p>
-            </div>
-        </a>
-        <a href="product.html ">
-            <div>
-                <img src="/assets/img/product.jpg" alt="product" />
-                <p>Chaise de bureau</p>
-                <p>24.99€</p>
-            </div>
-        </a>
-        <a href="product.html ">
-            <div>
-                <img src="/assets/img/product.jpg" alt="product" />
-                <p>Chaise de bureau</p>
-                <p>24.99€</p>
-            </div>
-        </a>
+        </a> -->
     </section>
 </body>
 
 </html>
+
+
+<script>
+    const items = [{ "id": 1, "name": "chaise", "price": 24.99, "url": "assets/img/product.jpg" },
+    { "id": 2, "name": "bureau", "price": 34.99, "url": "https:\/\/cdn-prod.habitat.fr\/thumbnails\/product\/1112\/1112877\/box\/850\/850\/40\/F4F4F4\/chaise-en-chene-massif-bois-clair_1112877.jpg" },
+    { "id": 3, "name": "chaise", "price": 24.99, "url": "https:\/\/www.burolia.fr\/images\/products\/bureaux-denomics-33411z.jpg" },
+    { "id": 4, "name": "bureau", "price": 34.99, "url": "assets/img/product.jpg" },
+    { "id": 5, "name": "chaise", "price": 24.99, "url": "assets/img/product.jpg" },
+    { "id": 6, "name": "bureau", "price": 34.99, "url": "assets/img/product.jpg" }]
+
+    // const items = fetch("http://localhost:3000/api/products")
+    //     .then(response => response.json())
+    //     .then(data => console.log(data));
+
+    const product_list = document.getElementById("product-list");
+    items.forEach(item => {
+        const product = document.createElement("a");
+        product.href = "product.html?id=" + item.id ;
+        const product_div = document.createElement("div");
+        const product_img = document.createElement("img");
+        product_img.src = item.url;
+        const product_name = document.createElement("p");
+        product_name.innerText = item.name;
+        const product_price = document.createElement("p");
+        product_price.innerText = item.price + "€";
+        product_div.appendChild(product_img);
+        product_div.appendChild(product_name);
+        product_div.appendChild(product_price);
+        product.appendChild(product_div);
+        product_list.appendChild(product);
+    });
+
+
+
+</script>
