--- a/front/index.html
+++ b/front/index.html
@@ -37,35 +37,32 @@
 </html>
 
 
-<script>
-    const items = [{ "id": 1, "name": "chaise", "price": 24.99, "url": "assets/img/product.jpg" },
-    { "id": 2, "name": "bureau", "price": 34.99, "url": "https:\/\/cdn-prod.habitat.fr\/thumbnails\/product\/1112\/1112877\/box\/850\/850\/40\/F4F4F4\/chaise-en-chene-massif-bois-clair_1112877.jpg" },
-    { "id": 3, "name": "chaise", "price": 24.99, "url": "https:\/\/www.burolia.fr\/images\/products\/bureaux-denomics-33411z.jpg" },
-    { "id": 4, "name": "bureau", "price": 34.99, "url": "assets/img/product.jpg" },
-    { "id": 5, "name": "chaise", "price": 24.99, "url": "assets/img/product.jpg" },
-    { "id": 6, "name": "bureau", "price": 34.99, "url": "assets/img/product.jpg" }]
+<script>    
+    fetch("http://192.168.152.134:7070/Product")
+        .then(response => response.json())
+        .then(data => {
+            let items = data["data"]
+            const product_list = document.getElementById("product-list");
+            items.forEach(item => {
+                const product = document.createElement("a");
+                product.href = "product.html?id=" + item.id ;
+                const product_div = document.createElement("div");
+                const product_img = document.createElement("img");
+                product_img.src = item.url;
+                const product_name = document.createElement("p");
+                product_name.innerText = item.name;
+                const product_price = document.createElement("p");
+                product_price.innerText = item.price + "€";
+                product_div.appendChild(product_img);
+                product_div.appendChild(product_name);
+                product_div.appendChild(product_price);
+                product.appendChild(product_div);
+                product_list.appendChild(product);
+            });
+        }
+    );
 
-    // const items = fetch("http://localhost:3000/api/products")
-    //     .then(response => response.json())
-    //     .then(data => console.log(data));
 
-    const product_list = document.getElementById("product-list");
-    items.forEach(item => {
-        const product = document.createElement("a");
-        product.href = "product.html?id=" + item.id ;
-        const product_div = document.createElement("div");
-        const product_img = document.createElement("img");
-        product_img.src = item.url;
-        const product_name = document.createElement("p");
-        product_name.innerText = item.name;
-        const product_price = document.createElement("p");
-        product_price.innerText = item.price + "€";
-        product_div.appendChild(product_img);
-        product_div.appendChild(product_name);
-        product_div.appendChild(product_price);
-        product.appendChild(product_div);
-        product_list.appendChild(product);
-    });
 
 
 
