--- a/front/index.html
+++ b/front/index.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
-    <title>Titre de la page</title>
-    <link rel="stylesheet" href="/style/reset.css">
-    <link rel="stylesheet" href="/style/ariane.css">
+    <title>Liste des produits - Shopsify</title>
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/ariane.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <header>
     <nav>
         <div>
-            <img />
-            <h1>Nom du site</h1>
+            <h1>Shopsify</h1>
         </div>
         <ul>
             <li><a href="index.html">Nos produits</a></li>
@@ -29,13 +28,6 @@
         <a href="panier.html">Panier</a>
     </div>
     <section id="product-list">
-        <!-- <a href="product.html ">
-            <div>
-                <img src="/assets/img/product.jpg" alt="product" />
-                <p>Chaise de bureau</p>
-                <p>24.99€</p>
-            </div>
-        </a> -->
     </section>
 </body>
 
