[add] login /register html

--- a/front/login.html
+++ b/front/login.html
@@ -20,18 +20,26 @@
     </nav>
 </header>
 
+
 <body>
-    <div class="ariane">
+    <section id="login">
         <div>
-            <a href="index.html">PRODUITS</a> <span>></span><a href="index.html">MEUBLE</a>
+            <h1>Connexion</h1>
+            <form>
+                <input placeholder="Adresse email"/>
+                <input placeholder="Mot de passe"/>
+                <a>
+                    mot de passe oublié
+                </a>
+                <div class="actions">
+                    <a>Je n'ai pas de compte</a>
+                    <p>OU</p>
+                    <span></span>
+                    <button type="submit">Se connecter</button>
+                </div>
+            </form>
         </div>
-        <a href="panier.html">Panier</a>
-    </div>
-    <section id="product-list">
     </section>
 </body>
 
 </html>
-
-<script src="script.js">
-</script>
