--- a/front/product.html
+++ b/front/product.html
@@ -14,11 +14,12 @@
         </div>
         <ul>
             <li><a href="index.html">Nos produits</a></li>
-            <li><a href="#">Connexion</a></li>
-            <li><a href="#">Inscription</a></li>
+            <li><a href="login.html">Connexion</a></li>
+            <li><a href="register.html">Inscription</a></li>
         </ul>
     </nav>
 </header>
+
 
 <body>
     <div class="ariane ariane--small">
@@ -84,103 +85,103 @@
     const urlParams = new URLSearchParams(window.location.search);
     const id = urlParams.get('id');
 
-    const items = [{ "id": 1, "name": "chaise", "price": 24.99, "url": "assets/img/product.jpg" },
-    { "id": 2, "name": "bureau", "price": 34.99, "url": "https:\/\/cdn-prod.habitat.fr\/thumbnails\/product\/1112\/1112877\/box\/850\/850\/40\/F4F4F4\/chaise-en-chene-massif-bois-clair_1112877.jpg" },
-    { "id": 3, "name": "chaise", "price": 24.99, "url": "https:\/\/www.burolia.fr\/images\/products\/bureaux-denomics-33411z.jpg" },
-    { "id": 4, "name": "bureau", "price": 34.99, "url": "assets/img/product.jpg" },
-    { "id": 5, "name": "chaise", "price": 24.99, "url": "assets/img/product.jpg" },
-    { "id": 6, "name": "bureau", "price": 34.99, "url": "assets/img/product.jpg" }]
+    // fetch with query param id 
 
-    const myItem = items.find(item => item.id == id)
+    fetch(`http://localhost:8100/Product/get/${id}`)
+        .then(response => response.json())
+        .then(data => {
+            let items = data["data"]
+            const myItem = items[0]
 
-    const productItem = document.getElementById('product-item')
+            const productItem = document.getElementById('product-item')
 
-    const ariane = document.querySelector('.ariane')
-    const divAriane = ariane.children[0]
-    const spanAriane = document.createElement('span')
-    spanAriane.textContent = '>'
-    divAriane.appendChild(spanAriane)
-    const aAriane = document.createElement('a')
-    aAriane.textContent = myItem.name
-    divAriane.appendChild(aAriane)
+            const ariane = document.querySelector('.ariane')
+            const divAriane = ariane.children[0]
+            const spanAriane = document.createElement('span')
+            spanAriane.textContent = '>'
+            divAriane.appendChild(spanAriane)
+            const aAriane = document.createElement('a')
+            aAriane.textContent = myItem.name
+            divAriane.appendChild(aAriane)
 
-    const img = document.createElement('img')
-    img.setAttribute('src', myItem.url)
-    img.setAttribute('alt', myItem.name)
-    productItem.appendChild(img)
+            const img = document.createElement('img')
+            img.setAttribute('src', myItem.url)
+            img.setAttribute('alt', myItem.name)
+            productItem.appendChild(img)
 
-    const div = document.createElement('div')
-    productItem.appendChild(div)
+            const div = document.createElement('div')
+            productItem.appendChild(div)
 
-    const div2 = document.createElement('div')
-    div2.setAttribute('class', 'product-head')
-    div.appendChild(div2)
+            const div2 = document.createElement('div')
+            div2.setAttribute('class', 'product-head')
+            div.appendChild(div2)
 
-    const h1 = document.createElement('h1')
-    h1.textContent = myItem.name
-    div2.appendChild(h1)
+            const h1 = document.createElement('h1')
+            h1.textContent = myItem.name
+            div2.appendChild(h1)
 
-    const h2 = document.createElement('h2')
-    h2.textContent = 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.'
-    div2.appendChild(h2)
+            const h2 = document.createElement('h2')
+            h2.textContent = 'Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.'
+            div2.appendChild(h2)
 
-    const div3 = document.createElement('div')
-    div.appendChild(div3)
+            const div3 = document.createElement('div')
+            div.appendChild(div3)
 
-    const h3 = document.createElement('h3')
-    h3.textContent = 'Choisir une autre couleur'
-    div3.appendChild(h3)
+            const h3 = document.createElement('h3')
+            h3.textContent = 'Choisir une autre couleur'
+            div3.appendChild(h3)
 
-    const div4 = document.createElement('div')
-    div4.setAttribute('class', 'color-list')
-    div3.appendChild(div4)
+            const div4 = document.createElement('div')
+            div4.setAttribute('class', 'color-list')
+            div3.appendChild(div4)
 
-    const span1 = document.createElement('span')
-    span1.setAttribute('class', '--white')
-    div4.appendChild(span1)
+            const span1 = document.createElement('span')
+            span1.setAttribute('class', '--white')
+            div4.appendChild(span1)
 
-    const span2 = document.createElement('span')
-    span2.setAttribute('class', '--red')
-    div4.appendChild(span2)
+            const span2 = document.createElement('span')
+            span2.setAttribute('class', '--red')
+            div4.appendChild(span2)
 
-    const span3 = document.createElement('span')
-    span3.setAttribute('class', '--yellow')
-    div4.appendChild(span3)
+            const span3 = document.createElement('span')
+            span3.setAttribute('class', '--yellow')
+            div4.appendChild(span3)
 
-    const span4 = document.createElement('span')
-    span4.setAttribute('class', '--green')
-    div4.appendChild(span4)
+            const span4 = document.createElement('span')
+            span4.setAttribute('class', '--green')
+            div4.appendChild(span4)
 
-    const div5 = document.createElement('div')
-    div5.setAttribute('class', 'product-submit')
-    div.appendChild(div5)
+            const div5 = document.createElement('div')
+            div5.setAttribute('class', 'product-submit')
+            div.appendChild(div5)
 
-    const button = document.createElement('button')
-    button.textContent = 'Ajouter au panier'
-    div5.appendChild(button)
+            const button = document.createElement('button')
+            button.textContent = 'Ajouter au panier'
+            div5.appendChild(button)
 
-    button.addEventListener('click', () => {
-        const cart = JSON.parse(localStorage.getItem('cart'))
-        if (!cart) {
-            const newCart = []
-            newCart.push(myItem)
-            localStorage.setItem('cart', JSON.stringify(newCart))
-        } else {
-            cart.push(myItem)
-            localStorage.setItem('cart', JSON.stringify(cart))
-        }
-    })
+            button.addEventListener('click', () => {
+                const cart = JSON.parse(localStorage.getItem('cart'))
+                if (!cart) {
+                    const newCart = []
+                    newCart.push(myItem)
+                    localStorage.setItem('cart', JSON.stringify(newCart))
+                } else {
+                    cart.push(myItem)
+                    localStorage.setItem('cart', JSON.stringify(cart))
+                }
+            })
 
-    const div6 = document.createElement('div')
-    div5.appendChild(div6)
+            const div6 = document.createElement('div')
+            div5.appendChild(div6)
 
-    const p = document.createElement('p')
-    p.textContent = myItem.price + '€'
-    div6.appendChild(p)
+            const p = document.createElement('p')
+            p.textContent = myItem.price + '€'
+            div6.appendChild(p)
 
-    const span = document.createElement('span')
+            const span = document.createElement('span')
 
-    span.textContent = '- dont 1 centime d\'éco participation'
-    p.appendChild(span)
+            span.textContent = '- dont 1 centime d\'éco participation'
+            p.appendChild(span)
+        })
 
 </script>
