[add] end integration

--- a/front/index.html
+++ b/front/index.html
@@ -12,10 +12,7 @@
         <div>
             <h1>Shopsify</h1>
         </div>
-        <ul>
-            <li><a href="index.html">Nos produits</a></li>
-            <li><a href="login.html">Connexion</a></li>
-            <li><a href="register.html">Inscription</a></li>
+        <ul id="nav-header">
         </ul>
     </nav>
 </header>
@@ -23,7 +20,7 @@
 <body>
     <div class="ariane">
         <div>
-            <a href="index.html">PRODUITS</a> <span>></span><a href="index.html">MEUBLE</a>
+            <a href="index.html">PRODUITS</a> <span>
         </div>
         <a href="panier.html">Panier</a>
     </div>
