--- a/front/product.html
+++ b/front/product.html
@@ -14,8 +14,8 @@
         </div>
         <ul>
             <li><a href="index.html">Nos produits</a></li>
-            <li><a href="login.html">Connexion</a></li>
-            <li><a href="register.html">Inscription</a></li>
+            <li><a href="profil.html">Profil</a></li>
+            <li><a>Deconnexion</a></li>
         </ul>
     </nav>
 </header>
@@ -23,8 +23,8 @@
 
 <body>
     <div class="ariane ariane--small">
-        <div>
-            <a href="index.html">PRODUITS</a> <span>></span><a href="index.html">MEUBLE</a>
+        <div id="ariane-product">
+            <a href="index.html">PRODUITS</a> <span>></span>
         </div>
         <a href="panier.html">Panier</a>
     </div>
@@ -85,8 +85,6 @@
     const urlParams = new URLSearchParams(window.location.search);
     const id = urlParams.get('id');
 
-    // fetch with query param id 
-
     fetch(`http://localhost:8100/Product/get/${id}`)
         .then(response => response.json())
         .then(data => {
@@ -97,12 +95,17 @@
 
             const ariane = document.querySelector('.ariane')
             const divAriane = ariane.children[0]
+            const aAriane = document.createElement('a')
+            aAriane.textContent = myItem.category_name
+            aAriane.setAttribute('href', 'index.html')
+            divAriane.appendChild(aAriane)
             const spanAriane = document.createElement('span')
             spanAriane.textContent = '>'
             divAriane.appendChild(spanAriane)
-            const aAriane = document.createElement('a')
-            aAriane.textContent = myItem.name
-            divAriane.appendChild(aAriane)
+            const aAriane2 = document.createElement('a')
+            aAriane2.textContent = myItem.name
+            divAriane.appendChild(aAriane2)
+
 
             const img = document.createElement('img')
             img.setAttribute('src', myItem.url)
@@ -184,4 +187,64 @@
             p.appendChild(span)
         })
 
+
+    let token = localStorage.getItem("devops-token");
+    fetch("http://localhost:8100/user/getinfo", {
+        method: 'POST',
+        mode: 'cors',
+        body: JSON.stringify({ session_id: token })
+    })
+        .then(response => response.json())
+        .then(data => {
+            let user = data["data"]
+            if (user === "Not logged") {
+                console.log("ici")
+                const nav_header = document.getElementById("nav-header");
+                const nav_li1 = document.createElement("li");
+                const nav_li2 = document.createElement("li");
+                const nav_li3 = document.createElement("li");
+                const nav_a1 = document.createElement("a");
+                const nav_a2 = document.createElement("a");
+                const nav_a3 = document.createElement("a");
+                nav_a1.href = "index.html";
+                nav_a1.innerText = "Nos produits";
+                nav_a2.href = "login.html";
+                nav_a2.innerText = "Connexion";
+                nav_a3.href = "register.html";
+                nav_a3.innerText = "Inscription";
+                nav_li1.appendChild(nav_a1);
+                nav_li2.appendChild(nav_a2);
+                nav_li3.appendChild(nav_a3);
+                nav_header.appendChild(nav_li1);
+                nav_header.appendChild(nav_li2);
+                nav_header.appendChild(nav_li3);
+            } else if (user.user_data) {
+                const nav_header = document.getElementById("nav-header");
+                const nav_li1 = document.createElement("li");
+                const nav_li2 = document.createElement("li");
+                const nav_li3 = document.createElement("li");
+                const nav_a1 = document.createElement("a");
+                const nav_a2 = document.createElement("a");
+                const nav_a3 = document.createElement("a");
+                nav_a1.href = "index.html";
+                nav_a1.innerText = "Nos produits";
+                nav_a2.href = "profile.html";
+                nav_a2.innerText = "Profil";
+                nav_a3.innerText = "Deconnexion";
+                nav_a3.id = "logout";
+                nav_li1.appendChild(nav_a1);
+                nav_li2.appendChild(nav_a2);
+                nav_li3.appendChild(nav_a3);
+                nav_header.appendChild(nav_li1);
+                nav_header.appendChild(nav_li2);
+                nav_header.appendChild(nav_li3);
+                nav_a3.addEventListener("click", () => {
+                    // remove the token from the local storage
+                    localStorage.removeItem("devops-token");
+                    // redirect to the index page
+                    window.location.href = "index.html";
+                });
+            }
+        }
+        );
 </script>
