--- a/front/product.html
+++ b/front/product.html
@@ -14,7 +14,7 @@
         </div>
         <ul>
             <li><a href="index.html">Nos produits</a></li>
-            <li><a href="profil.html">Profil</a></li>
+            <li><a href="profile.html">Profil</a></li>
             <li><a>Deconnexion</a></li>
         </ul>
     </nav>
